fix: update what we do slide width for mobile, and align the contact form tag line to the left

--- a/src/App.css
+++ b/src/App.css
@@ -151,3 +151,6 @@ html{
     display: none;
   }
 }
+.to_left{
+  text-align: left;
+}
